Integrate registration/login views

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,57 +5,32 @@
       <div class="col-md-6 offset-md-3 col-xs-12">
         <h1 class="text-xs-center">Sign up</h1>
         <p class="text-xs-center">
-          <a href="">Have an account?</a>
+          <%= link_to 'Have an account?', new_user_session_path %>
         </p>
 
-        <ul class="error-messages">
-          <li>That email is already taken</li>
-        </ul>
+        <% if resource.errors.any? %>
+          <%#= render "devise/shared/error_messages", resource: resource %>
+          <ul class="error-messages">
+            <% resource.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
 
-        <form>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Your Name">
+            <%= f.text_field :username, autofocus: true, placeholder: 'Your Name', class: 'form-control form-control-lg' %>
           </fieldset>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Email">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email', class: 'form-control form-control-lg' %>
           </fieldset>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="password" placeholder="Password">
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Password', class: 'form-control form-control-lg' %>
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">
-            Sign up
-          </button>
-        </form>
+          <%= f.submit "Sign up", class: 'btn btn-lg btn-primary pull-xs-right' %>
+        <% end %>
       </div>
 
     </div>
   </div>
 </div>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
