--- a/app/views/article/show.html.erb
+++ b/app/views/article/show.html.erb
@@ -3,7 +3,7 @@
   <div class="banner">
     <div class="container">
       <h1><%= @article.title %></h1>
-      <%= render 'article-meta' %>
+      <%= render 'article-meta', article: @article %>
     </div>
   </div>
 
@@ -18,7 +18,7 @@
     <hr />
 
     <div class="article-actions">
-      <%= render 'article-meta' %>
+      <%= render 'article-meta', article: @article %>
     </div>
 
     <div class="row">
