--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="<%= settings_path %>">
               <i class="ion-gear-a"></i>&nbsp;Settings
             </a>
           </li>
