--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -7,9 +7,7 @@
         <div class="col-xs-12 col-md-10 offset-md-1">
           <img src="<%= profile_image(@user) %>" class="user-img" />
           <h4><%= @user.username %></h4>
-          <p>
-            Cofounder @GoThinkster, lived in Aol's HQ for a few months, kinda looks like Peeta from the Hunger Games
-          </p>
+          <p><%= @user.bio %></p>
           <button class="btn btn-sm btn-outline-secondary action-btn">
             <i class="ion-plus-round"></i>
             &nbsp;
