--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,46 +16,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-
-     <nav class="navbar navbar-light">
-      <div class="container">
-        <%= link_to 'conduit', home_path, class: 'navbar-brand' %>
-        <ul class="nav navbar-nav pull-xs-right">
-          <li class="nav-item">
-            <!-- TODO: Add "active" class when you're on that page" -->
-            <%= link_to 'Home', home_path, class: 'nav-link' %>
-          </li>
-          <% if current_user %>
-            <li class="nav-item">
-              <a class="nav-link" href="">
-                <i class="ion-compose"></i>&nbsp;New Post
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="<%= settings_path %>">
-                <i class="ion-gear-a"></i>&nbsp;Settings
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="<%= profile_path(current_user.username) %>">
-                <img class="user-pic" src="<%= profile_image(current_user) %>">
-                <%= current_user.username %>
-              </a>
-            <li class="nav-item">
-              <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-          <% else %>
-            <li class="nav-item">
-              <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
-
+    <%= render 'nav' %>
     <%= yield %>
 
     <footer>
